--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
   <canvas id="tetris" width="200" height="400"></canvas>
-  <script src="pieces.js"></script>
+  <script src="tetrominoes.js"></script>
   <script src="tetris.js"></script>
 </body>
 
