--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 
 <body>
   <canvas id="tetris" width="200" height="400"></canvas>
+  <div>
+        Score : <div id="score">0</div>
+  </div>
   <script src="tetrominoes.js"></script>
   <script src="tetris.js"></script>
 </body>
