--- a/index.html
+++ b/index.html
@@ -3,29 +3,15 @@
 <head>
   <title>Tetris Game</title>
   <style>
-    #score {
-      display: inline-block;
-    }
-
-    div {
-      font-size: 25px;
-      font-weight: bold;
-      font-family: monospace;
-      text-align: center;
-    }
-
-    canvas {
-      display: block;
-      margin: 0 auto;
-    }
   </style>
+  <link rel="stylesheet" type="text/css" href="tetris.css" media="screen" />
 </head>
 
 <body>
-  <canvas id="tetris" width="200" height="400"></canvas>
+  <canvas id="tetris" width="300" height="600"></canvas>
   <div>
     Score : <div id="score">0</div><br/>
-    High Score : 
+    High Score : <div id="highScore">0</div>
   </div>
   <script src="tetrominoes.js"></script>
   <script src="tetris.js"></script>
