--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <body>
   <canvas id="tetris" width="300" height="600"></canvas>
-  <div>
-    Score : <div id="score">0</div><br/>
-    High Score : <div id="highScore">0</div>
+  <div id="scoreBoard">
+    Score: <div id="score">0</div><br/>
+    High Score: <div id="highScore">0</div>
   </div>
   <script src="tetrominoes.js"></script>
   <script src="tetris.js"></script>
