row tally added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <canvas id="tetris" width="300" height="600"></canvas>
   <div id="scoreBoard">
     Score: <div id="score">0</div><br/>
+    Rows: <div id="row">0</div><br/>
     High Score: <div id="highScore">0</div>
   </div>
   <script src="tetrominoes.js"></script>
