added box for next tetromino

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
   <canvas id="tetris" width="400" height="800"></canvas>
   <div id="scoreBoard">
-    Score: <div id="score">0</div><br/>
-    Rows: <div id="rowTally">0</div><br/>
+    Score: <div id="score">0</div><br />
+    Rows: <div id="rowTally">0</div><br />
     High Score: <div id="highScore">0</div>
   </div>
+  <div id="nextTetromino">Next Tetromio</div>
   <script src="tetrominoes.js"></script>
   <script src="tetris.js"></script>
 </body>
