fix errors in script

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <div id="flexbox">
     <div id="scoreboard">
       Score: <div id="score">0</div><br />
-      Rows: <div id="score">0</div><br />
-      High Score: <div id="score">0</div>
+      Rows: <div id="rowTally">0</div><br />
+      High Score: <div id="highScore">0</div>
     </div>
     <canvas id="tetris" width="400" height="800"></canvas>
     <canvas id="next">
