commment out code

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       High Score: <div id="highScore">0</div>
     </div>
     <canvas id="tetris" width="400" height="800"></canvas>
-    <canvas id="next">
+    <!-- <canvas id="next" width="40" height="40"> -->
     </canvas>
   </div>
   <script src="tetrominoes.js"></script>
